--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,41 +1,41 @@
-name: Web Scraping
+name: Update Data and HTML
 
 on:
   schedule:
-    - cron: '*/2 * * * *' # Runs every 2 minutes
+    - cron: "*/2 * * * *"
 
 jobs:
-  scrape:
+  update:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
+    - name: Checkout repository
       uses: actions/checkout@v2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-
+      
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x' # Change to your Python version if needed
+        python-version: '3.x'
 
-    - name: Install Dependencies
+    - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install requests beautifulsoup4
+        pip install -r requirements.txt
 
-    - name: Run Web Scraping Script
+    - name: Run scrape.py
       run: python scrape.py
 
-    - name: Commit and Push Changes
+    - name: Update data.json
       run: |
-        git config --global user.name "PrkHlyaa"
-        git config --global user.email "zahra19hilyatul@gmail.com"
-        git add data.json
-        git commit -m "Update data.json"
+        cp new_data.json data.json
+        
+    - name: Update berita.html
+      run: |
+        python update_html.py
+        
+    - name: Commit and push changes
+      run: |
+        git config --local user.email "zahra19hilyatul19@gmail.com"
+        git config --local user.name "PrkHilyaa"
+        git add data.json berita.html
+        git commit -m "Update data and HTML"
         git push
